# vgstation13

./: #280854234  .atom-build.json  .byond_version  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .tgs.yml  .travis.yml  362x229.dmi  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  SpacemanDMM.toml  TESTING.log.txt  __compile_options.dm  barsign.dm  baystation12.dme  broken_hand_icons.txt  butterfly.dm  corgi.dmi  dependencies.sh  dm.sh  glowstick.dmi  goatfuckerswordlh.dmi  goatfuckerswordrh.dmi  gun.dmi  handle_disabilities.dm  human_profiling.csv  human_profiling.xlsx  install-byond.sh  machine_profiling.csv  machine_profiling.xlsx  mapping priority permit.txt  masks.dmi  nearest_dmi.py  perlin.txt  poofy2.dmi  (+18 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
DLLSocket/: DLLSocket.depend  DLLSocket.layout  restart.py
SQL/: feedback_schema.sql  players2.sql
Vert's unused sprites/: DrinkIco.dmi  WhiteNinja.dmi
__DEFINES/: BSQL.dm  BSQL_config.dm  MC.dm  ZAS.dm  __compile_options.dm  __opendream.dm  __spaceman_dmm.dm  _macros.dm  accessories.dm  archaeo_defines.dm  areas.dm  atmos.dm  atmos_automation.dm  atom_locking.dm  atom_locking_and_control.dm  atoms.dm  blob.dm  bots.dm  breakable_defines.dm  callback.dm  callbacks.dm  cameranet.dm  carbon_defines.dm  chat.dm  clothing.dm  colors.dm  communications.dm  component_desires.dm  component_signals.dm  components.dm  dates.dm  disease2.dm  fishing_defines_lists.dm  flags.dm  (+60 more)
tools/runtime-condenser/: .gitignore  Cargo.toml
tools/runtime-condenser/src/: main.rs  main.rs.bk
(+7174 files in other folders)
